<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPurple"
    tools:context="com.example.android.musicplayerproject.PlayActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/play_back_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/musicapp_icon_back_blue" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/play_now_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="end|center_vertical"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/blueText"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/play_playing_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_vertical"
            android:text="@string/now"
            android:textAllCaps="true"
            android:textColor="@color/whiteText"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_now_text"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/play_artist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:alpha="0.35"
        android:contentDescription="@string/a_picture_of_the_artist"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/yellow_house" />

    <ImageView
        android:id="@+id/play_play_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/a_play_button"
        app:layout_constraintBottom_toBottomOf="@+id/play_artist_image"
        app:layout_constraintEnd_toEndOf="@+id/play_artist_image"
        app:layout_constraintStart_toStartOf="@+id/play_artist_image"
        app:layout_constraintTop_toTopOf="@+id/play_artist_image"
        app:srcCompat="@drawable/musicappicon_play_darkercircle" />

    <ImageView
        android:id="@+id/notes_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/decorative_graphic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/musicappicon_notes_blue" />

    <TextView
        android:id="@+id/play_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/whiteText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/play_play_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Yellow House" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/underSmallTexts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/play_album_cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/album_cover_artwork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/yellow_house_raindance" />

        <TextView
            android:id="@+id/play_artist_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/album_text_padding"
            android:textAllCaps="true"
            android:textColor="@color/whiteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_album_cover"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/play_album_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="top"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/album_text_padding"
            android:textColor="@color/blueTextLighter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_album_cover"
            app:layout_constraintTop_toBottomOf="@+id/play_artist_name" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/backwards_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/backwards_button"
        app:layout_constraintBottom_toBottomOf="@+id/play_artist_image"
        app:layout_constraintEnd_toStartOf="@+id/play_play_icon"
        app:layout_constraintStart_toStartOf="@+id/play_artist_image"
        app:layout_constraintTop_toTopOf="@+id/play_artist_image"
        app:srcCompat="@drawable/musicappicon_fastbackwards" />

    <ImageView
        android:id="@+id/forwards_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/forwards_button"
        app:layout_constraintBottom_toBottomOf="@+id/play_artist_image"
        app:layout_constraintEnd_toEndOf="@+id/play_artist_image"
        app:layout_constraintStart_toEndOf="@+id/play_play_icon"
        app:layout_constraintTop_toTopOf="@+id/play_artist_image"
        app:srcCompat="@drawable/musicappicon_fastforwards" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/decorative_graphic"
        app:layout_constraintBottom_toBottomOf="@+id/play_artist_image"
        app:layout_constraintEnd_toEndOf="@+id/play_artist_image"
        app:layout_constraintStart_toStartOf="@+id/play_artist_image"
        app:layout_constraintTop_toBottomOf="@+id/play_play_icon"
        app:srcCompat="@drawable/musicappicon_progress_bar" />



</android.support.constraint.ConstraintLayout>
